# AxDeepScholar

./: .gitignore  README v2.md  README.md  main.py  pyproject.toml  사용모델 지식커트.md  사용모델 지식커트md  팅툴 전략법.md
src/: api.py  web.py
src/agent/main/: main_agent.ipynb  main_agent.py  main_state.py
src/agent/main_agent/: main_agent.ipynb  main_state.py
src/agent/research/: research_agent.ipynb  research_agent.py  research_state.py
src/agent/research_agent/: research_agent.ipynb  research_state.py
src/agent/supervisor/: supervisor_agent.ipynb  supervisor_agent.py  supervisor_state.py
src/core/: __init__.py
src/core/model/: llm.py
src/core/prompts/: PromptManager.py  PromptTemplate.py  PromptType.py  prompts.yaml
src/core/rag/: AxrivRetriever.py  embedding.ipynb  preprocessing.ipynb  rag_run_test.ipynb
src/data/rag/rag_2409.08045v1_pages_x/: page_01.xml  page_02.xml  page_03.xml  page_04.xml  page_05.xml  page_06.xml  page_07.xml  page_08.xml  page_09.xml  page_10.xml  page_11.xml  page_12.xml  page_13.xml  page_14.xml  page_15.xml  page_16.xml  page_17.xml  page_18.xml
src/data/rag/rag_2409.09916v1_pages_x/: page_01.xml  page_02.xml  page_03.xml  page_04.xml  page_05.xml  page_06.xml  page_07.xml  page_08.xml  page_09.xml  page_10.xml  page_11.xml  page_12.xml
src/data/rag/rag_2409.11242v4_pages_x/: page_01.xml  page_02.xml  page_03.xml  page_04.xml  page_05.xml  page_06.xml  page_07.xml  page_08.xml  page_09.xml  page_10.xml  page_11.xml  page_12.xml  page_13.xml  page_14.xml  page_15.xml  page_16.xml  page_17.xml  page_18.xml  page_19.xml  page_20.xml  page_21.xml  page_22.xml  page_23.xml  page_24.xml  page_25.xml  page_26.xml  page_27.xml  page_28.xml  page_29.xml  page_30.xml  page_31.xml  page_32.xml  page_33.xml  page_34.xml  page_35.xml  page_36.xml  page_37.xml  (+4 more)
src/labs/: chunkers.py  simple_test.ipynb
src/tools/: __init__.py  document_parser.py  document_parser_test1.ipynb  document_parser_test2.ipynb  rag_test.ipynb  retriever_tool.py  think_tool.py
src/utils/: __init__.py  custom_message_text.py  helper.py
test/: MementoTest1.py  MementoTest2.py  ai_model_test.ipynb  dummy.py  test.ipynb
(+27 files in other folders)
