[project]
name = "axdeepscholar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "anthropic>=0.70.0",
    "chromadb>=1.1.1",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.12.0",
    "transformers>=4.57.1",
]
