[project]
name = "axdeepscholar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "anthropic>=0.70.0",
    "arxiv>=2.3.1",
    "chromadb>=1.1.1",
    "datasets>=4.4.1",
    "docling>=2.57.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.121.3",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.0",
    "pypdf>=6.1.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers==3.4.1",
    "streamlit>=1.51.0",
    "tavily-python>=0.7.12",
    "tiktoken>=0.12.0",
    "transformers>=4.57.1",
    "uvicorn>=0.37.0",
    "watchdog>=6.0.0",
]